# interviewlm-cs

./: .dockerignore  .env.example  .eslintrc.json  .gcloudignore  .gitignore  .gitmodules  ARCHITECTURE_QUICK_REFERENCE.md  AWS_DEPLOYMENT_ARCHITECTURE.md  CLAUDE.md  COMPLETED_WORK_SUMMARY.md  COMPONENT_REFERENCE.md  Dockerfile  EVALUATION_AGENT_REPORT.md  FRONTEND_ANALYSIS.md  FRONTEND_BACKEND_REVIEW.md  GTM Strategy for InterviewLM_ Blueprint for Market.md  IMPLEMENTATION_CHECKLIST.md  INCREMENTAL_QUESTION_IMPLEMENTATION_PROGRESS.md  INTEGRATION_GUIDE.md  INVENTORY_SUMMARY.md  MODAL_INTEGRATION_VERIFICATION.md  OAUTH_SETUP.md  P0_FIXES_SUMMARY.md  PREMIUM_PRICING_SUMMARY.txt  PRODUCTION_READINESS_PLAN.md  QUICK_START.md  README.md  README_COGS_ANALYSIS.md  SESSION_RECORDING_VERIFICATION.md  SPRINT_4_AND_5_COMPLETE.md  STATUS.md  analyze_timeline.js  auth.config.ts  auth.ts  check_session.js  debug-env.js  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  ecosystem.config.js  (+18 more)
.github/: copilot-instructions.md
__tests__/: README.md  SPRINT_1_2_TEST_STATUS.md  TEST_SUMMARY.md
admin/: .env.example  Dockerfile  docker-compose.yml  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: Logo.tsx
docs/: AGENT_SDK_SUMMARY.md  AGENT_SECURITY.md  ANALYSIS_INDEX.md  AWS_DEPLOYMENT_QUICK_REFERENCE.md  BACKEND_SETUP.md  CALCULATION_SUMMARY.txt  CLAUDE_AGENT_SDK_ARCHITECTURE.md  CLAUDE_AGENT_SDK_RESEARCH_REPORT.md  CLAUDE_CODE_TOKEN_ANALYSIS.md  CLAUDE_SDK_INTEGRATION_GUIDE.md  CLAUDE_SDK_QUICK_REFERENCE.md  CODEBASE_INVENTORY.md  CODE_STREAMING.md  CODING_AGENT_TOOLS_RESEARCH.md  COGS_ANALYSIS.md  COGS_DETAILED_CALCULATIONS.md  COGS_QUICK_REFERENCE.md  COGS_SUMMARY.txt  CURATED_QUESTION_BANK.md  DEPLOYMENT.md  DIFFICULTY_CALIBRATION_SYSTEM.md  DISASTER_RECOVERY.md  DOCKER.md  DYNAMIC_QUESTION_UX_ANALYSIS.md  EMAIL_SERVICE_SETUP.md  EVALUATION_AGENT_ARCHITECTURE.md  EVALUATION_AGENT_RESEARCH_SUMMARY.md  EVENT_STORE_ARCHITECTURE.md  EXECUTIVE_SUMMARY.txt  FILE_STRUCTURE.md  (+48 more)
langgraph-agents/: .env.example  .gitignore  BENCHMARK_README.md  Dockerfile  Makefile  README.md  analyze_benchmark.py  api.py  api_legacy.py  auth.py  benchmark.py  docker-compose.aegra.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt  server.py  start.sh  test_bind_tools_cache.py  test_cache_and_summarization.py  test_caching.py  test_coding_cache.py  test_direct_cache.py  test_injection.py  test_llm_response.py
langgraph-agents/.langgraph_api/: .langgraph_ops.pckl
langgraph-agents/agents/: __init__.py  coding_agent.py  comprehensive_agent.py  evaluation_agent.py  fast_progression_agent.py  interview_agent.py  question_evaluation_agent.py  question_generation_agent.py  supervisor.py
langgraph-agents/config/: __init__.py  settings.py  thread_utils.py
langgraph-agents/middleware/: __init__.py  anthropic_caching.py  auth.py  iteration_tracking.py  summarization.py  system_prompt.py
langgraph-agents/models/: __init__.py  db_models.py  question_generation.py  state.py
langgraph-agents/services/: __init__.py  cache.py  config_service.py  database.py  gcs.py  modal_manager.py  model_factory.py
langgraph-agents/services/question_generation/: __init__.py  complexity_profiles.py  irt_engine.py  prompts.py  smart_service.py
langgraph-agents/tests/: conftest.py  test_coding_tools.py  test_evaluation_agent.py  test_interview_agent.py  test_summarization.py  test_supervisor.py
langgraph-agents/tools/: __init__.py  coding_tools.py  evaluation_tools.py  fast_evaluation_tools.py  question_tools.py
(+576 files in other folders)
