[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agents"
version = "0.1.0"
description = "LangGraph multi-agent system for InterviewLM"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "services*", "models*", "middleware*", "config*"]
