[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agents"
version = "0.1.0"
description = "LangGraph multi-agent system for InterviewLM"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "services*", "models*", "middleware*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "aegra",
    "__pycache__",
    "*.egg-info",
    "benchmark_results",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file
    "E711",   # comparison to None (needed for SQLAlchemy)
    "E712",   # comparison to True/False (needed for SQLAlchemy)
    "F401",   # imported but unused (too noisy for existing code)
    "F821",   # undefined name (false positive for forward references)
    "F841",   # local variable assigned but never used
    "W293",   # blank line contains whitespace
    "W291",   # trailing whitespace
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "tools", "middleware", "models", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "aegra/",
    ".venv/",
    "benchmark_results/",
    "test_*.py",
    "tests/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
